--- a/Readme
+++ b/Readme
@@ -1,1 +1,2 @@
 This repository consist of a collection of C programs that I have written for teaching my classes
+I am still working on this repository to make it a complete one that can be easily used for learning
